--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
     },
     "devDependencies": {
         "axios": "^0.21",
+        "bootstrap": "^5.0.1",
+        "jquery": "^3.6.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "popper.js": "^1.16.1",
+        "postcss": "^8.1.14",
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.33.0",
+        "sass-loader": "^11.1.1"
     }
 }
